--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@hookform/resolvers": "^2.6.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@rehooks/window-size": "^1.0.2",
@@ -14,17 +15,21 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "fg-loadcss": "^3.1.0",
     "framer-motion": "^4.1.9",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-use-dimensions": "^1.2.1",
     "styled-components": "^5.2.3",
     "styled-reset-advanced": "^1.0.3",
-    "web-vitals": "^1.0.1"
+    "sweetalert2": "^11.0.18",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
